# symphony.py

./: .dockerignore  .env.example  ARCHITECTURE.md  Dockerfile  Makefile  QUICKSTART.md  README.md  WORKFLOW.md  docker-compose.yml  install.sh  pyproject.toml  pytest.ini  实现进度.md  开发计划.md
examples/: WORKFLOW.advanced.md  WORKFLOW.simple.md  docker-compose.override.yml
scripts/: run_tests.sh
src/symphony/: __init__.py  __main__.py  cli.py
src/symphony/agents/: __init__.py  agent.py
src/symphony/agents/tools/: __init__.py  file_tools.py  linear_tool.py  shell_tool.py
src/symphony/cli_commands/: __init__.py  doctor.py  init.py  validate.py
src/symphony/config/: __init__.py  config.py  schema.py
src/symphony/dashboard/: __init__.py  dashboard.py
src/symphony/llm/: __init__.py  client.py  providers.py
src/symphony/models/: __init__.py  issue.py  session.py
src/symphony/orchestrator/: __init__.py  orchestrator.py  state.py
src/symphony/prompts/: __init__.py  builder.py
src/symphony/trackers/: __init__.py  base.py  linear.py  memory.py
src/symphony/utils/: __init__.py
src/symphony/workflow/: __init__.py  loader.py
src/symphony/workspace/: __init__.py  manager.py  safety.py
tests/: README.md  __init__.py  conftest.py  test_agent_integration.py  test_e2e_smoke.py  test_llm_integration.py  test_orchestrator_state.py  test_tools_functionality.py  test_tracker_integration.py  test_workspace_safety.py
